--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 标题
-VITE_APP_TITLE=芋道管理系统
+VITE_APP_TITLE=pyberclub管理后台
 
 # 项目本地运行端口号
 VITE_PORT=80
@@ -11,7 +11,7 @@ VITE_OPEN=true
 VITE_APP_TENANT_ENABLE=true
 
 # 验证码的开关
-VITE_APP_CAPTCHA_ENABLE=true
+VITE_APP_CAPTCHA_ENABLE=false
 
 # 文档地址的开关
 VITE_APP_DOCALERT_ENABLE=true
