--- a/.env.prod
+++ b/.env.prod
@@ -4,12 +4,13 @@ NODE_ENV=production
 VITE_DEV=false
 
 # 请求路径
-VITE_BASE_URL='http://localhost:48080'
+# VITE_BASE_URL='http://localhost:48080'
+VITE_BASE_URL='https://www.pyberclub.com'
 
 # 文件上传类型：server - 后端上传， client - 前端直连上传，仅支持S3服务
-VITE_UPLOAD_TYPE=server
+VITE_UPLOAD_TYPE=client
 # 上传路径
-VITE_UPLOAD_URL='http://localhost:48080/admin-api/infra/file/upload'
+VITE_UPLOAD_URL='https://www.pyberclub.com/admin-api/infra/file/upload'
 
 # 接口前缀
 VITE_API_BASEPATH=
@@ -33,4 +34,5 @@ VITE_BASE_PATH=/
 VITE_OUT_DIR=dist-prod
 
 # 商城H5会员端域名
-VITE_MALL_H5_DOMAIN='http://mall.yudao.iocoder.cn'
+#VITE_MALL_H5_DOMAIN='http://mall.yudao.iocoder.cn'
+VITE_MALL_H5_DOMAIN='https://www.pyberclub.com'
